@@ -1,3 +1,12 @@
+2007-11-19  Marcus D. Hanwell <marcus@cryos.org>
+
+	* libavogadro/src/glpainter.cpp: Improvements to the drawTriangle
+	function - generate valid normals for the triangles.
+
+	* libavogadro/src/engines/CMakeLists.txt,
+	libavogadro/src/engines/polygonengine.*: Added a new polygon engine.
+	Render certain structures as polygons.
+
 2007-11-19  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* libavogadro/src/glpainter.cpp: Refinement of multiple bonds in
